test/correct/PMC10.hs
module PMC10 where

main :: Int
main = length (filter even [1..1000])
