test/typeerrors/Heuristics/AppTooManyArguments2.hs
module AppTooManyArguments2 where

main :: [Int]
main = filter even [0,2..] [1,3..]
